@@ -215,7 +215,7 @@
         <plugin>
           <artifactId>maven-surefire-plugin</artifactId>
           <version>${surefire-plugin.version}</version>
-          <configuration>
+            <configuration>
             <systemPropertyVariables>
               <java.util.logging.manager>org.jboss.logmanager.LogManager</java.util.logging.manager>
               <maven.home>${maven.home}</maven.home>
@@ -223,7 +223,7 @@
             <includes>
               <include>**/*Test.java</include>
             </includes>
-            <!--<argLine>&#45;&#45;enable-preview</argLine>-->
+            <argLine>--add-opens java.base/java.nio=ALL-UNNAMED --add-opens java.base/sun.nio.ch=ALL-UNNAMED</argLine>
           </configuration>
         </plugin>
       </plugins>
